--- a/CapitalCities/Base.lproj/Main.storyboard
+++ b/CapitalCities/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x13-IH-kVw">
-                                <rect key="frame" x="0.0" y="103" width="393" height="749"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <standardMapConfiguration key="preferredConfiguration"/>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="9nO-Oq-tTU"/>
@@ -29,7 +29,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="x13-IH-kVw" secondAttribute="trailing" id="08l-zY-cfY"/>
-                            <constraint firstItem="x13-IH-kVw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KAb-Tc-cTF"/>
+                            <constraint firstItem="x13-IH-kVw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="KAb-Tc-cTF"/>
                             <constraint firstItem="x13-IH-kVw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ZjA-wV-I1J"/>
                             <constraint firstAttribute="bottom" secondItem="x13-IH-kVw" secondAttribute="bottom" id="w2B-Xo-2ng"/>
                         </constraints>
@@ -51,6 +51,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="XHG-yx-Lzb">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <navigationBarAppearance key="scrollEdgeAppearance"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
